--- a/less/variables.less
+++ b/less/variables.less
@@ -33,12 +33,13 @@
 // Scaffolding
 // -------------------------
 @bodyBackground:        @white;
-@textColor:             @grayDark;
+@textColor:             @gray;
+@lighterTextColor:      #777;
 
 
 // Links
 // -------------------------
-@linkColor:             #08c;
+@linkColor:             #176586;
 @linkColorHover:        darken(@linkColor, 15%);
 
 
@@ -70,9 +71,9 @@
 @paddingSmall:          2px 10px;  // 26px
 @paddingMini:           0 6px;   // 22px
 
-@baseBorderRadius:      4px;
-@borderRadiusLarge:     6px;
-@borderRadiusSmall:     3px;
+@baseBorderRadius:      1px;
+@borderRadiusLarge:     3px;
+@borderRadiusSmall:     0;
 
 
 // Tables
@@ -110,7 +111,7 @@
 // Forms
 // -------------------------
 @inputBackground:               @white;
-@inputBorder:                   #ccc;
+@inputBorder:                   #bfbfbf;
 @inputBorderRadius:             @baseBorderRadius;
 @inputDisabledBackground:       @grayLighter;
 @formActionsBackground:         #f5f5f5;
@@ -272,8 +273,8 @@
 // Default 940px grid
 // -------------------------
 @gridColumns:             12;
-@gridColumnWidth:         60px;
-@gridGutterWidth:         20px;
+@gridColumnWidth:         61px;
+@gridGutterWidth:         24px;
 @gridRowWidth:            (@gridColumns * @gridColumnWidth) + (@gridGutterWidth * (@gridColumns - 1));
 
 // 1200px min
