Completed markup for index page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
         <!-- HEADER END -->
         
         <!-- MAIN CONTENT START -->
-        <div class="content-wrapper container">
+        <div class="content-wrapper">
             <%= yield %>
         </div>
         <!-- MAIN CONTENT END -->
@@ -93,6 +93,7 @@
         </div>
     </footer>
     <!-- FOOTER END -->
+    <script type="text/javascript" charset="utf-8" src="/js/main.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
