--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1618,7 +1618,7 @@ legend + .control-group {
   *margin-right: .3em;
   line-height: 14px;
   vertical-align: text-top;
-  background-image: url("../img/glyphicons-halflings.png");
+  background-image: url("/images/glyphicons-halflings.png");
   background-position: 14px 14px;
   background-repeat: no-repeat;
   margin-top: 1px;
@@ -1637,7 +1637,7 @@ legend + .control-group {
 .dropdown-menu > .active > a > [class*=" icon-"],
 .dropdown-submenu:hover > a > [class^="icon-"],
 .dropdown-submenu:hover > a > [class*=" icon-"] {
-  background-image: url("../img/glyphicons-halflings-white.png");
+  background-image: url("/images/glyphicons-halflings-white.png");
 }
 .icon-glass {
   background-position: 0      0;
@@ -3497,4 +3497,108 @@ body {
   float: left;
   min-height: 1px;
   margin-left: 24px;
+}
+#map_canvas {
+  width: 1000px;
+  height: 562px;
+  background-color: #cccccc;
+}
+h1 {
+  color: #000;
+  text-align: center;
+  margin: 36px 0 24px;
+  font-weight: normal;
+  font-size: 24px;
+  position: relative;
+}
+h1 hr {
+  background-color: #c9c9c9;
+  height: 1px;
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  margin: 0;
+  z-index: 1;
+}
+h1 .big-header-with-icon-container {
+  display: inline-block;
+  z-index: 3;
+  background-color: #ffffff;
+  position: relative;
+  padding: 0 12px;
+}
+.post-announce {
+  position: relative;
+  border-radius: 10px;
+  background-color: #d0d6e2;
+  background-image: -moz-linear-gradient(top, #b7c2d5, #f5f5f5);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#b7c2d5), to(#f5f5f5));
+  background-image: -webkit-linear-gradient(top, #b7c2d5, #f5f5f5);
+  background-image: -o-linear-gradient(top, #b7c2d5, #f5f5f5);
+  background-image: linear-gradient(to bottom, #b7c2d5, #f5f5f5);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffb7c2d5', endColorstr='#fff5f5f5', GradientType=0);
+  text-align: center;
+  padding: 24px 24px 0;
+}
+.post-announce .post-announce__image-container a {
+  background-color: #ffffff;
+  border-radius: 6px;
+  padding: 6px;
+  display: inline-block;
+}
+.post-announce h2 {
+  color: #000000;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 20px;
+  margin: 12px 0 12px;
+}
+.post-announce h2 a {
+  color: #000000;
+}
+.post-announce h2 a:hover {
+  color: lighter(#000000, 15%);
+}
+.post-announce .post-announce__controls {
+  background-color: #000000;
+  color: #ffffff;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 24px;
+  text-align: justify;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.post-announce .post-announce__controls a {
+  color: #ffffff;
+}
+.post-announce .post-announce__controls a:hover {
+  color: #ffffff;
+}
+.post-announce .post-announce__user-link {
+  display: inline-block;
+  margin-bottom: 92px;
+  color: #777777;
+}
+.post-announce .post-announce__user-link:hover {
+  color: darker(#777777, 15%);
+}
+.show-more-discussions-link {
+  border-bottom: 1px dotted #000000;
+  font-size: 18px;
+  display: inline-block;
+  text-align: center;
+  color: #000000;
+  margin: 24px 0 36px;
+}
+.show-more-discussions-link:hover {
+  color: lighter(#000000, 15%);
+  text-decoration: none;
+  border-bottom: none;
+}
+.text-align-center-container {
+  text-align: center;
 }
