--- a/less/map.less
+++ b/less/map.less
@@ -3,3 +3,10 @@
     height: 562px;
     background-color: #ccc
 }
+
+#credit-control {
+    font-size: @baseFontSize;
+    text-shadow: 45deg @white;
+    color: @linkColor;
+    margin-top: 36px;
+}
