Implemented initial-level popovers over sky objects

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -142,6 +142,9 @@
         </footer>
     </div>
     <!-- FOOTER END -->
+    <script type="text/javascript" charset="utf-8" src="/js/bootstrap-tooltip.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/js/bootstrap-popover.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/js/infobubble.js"></script>
     <script type="text/javascript" charset="utf-8" src="/js/main.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
