--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,12 +1,9 @@
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> 
-<div class="container">
-    <div class="row">
-        <div class="span12">
-            <div id="map_canvas">
+<div id="map_canvas">
 
-            </div>
-        </div>
-    </div>
+</div>
+<div class="top-sky-objects-container">
+    
 </div>
 <div class="container">
     <div class="row">
