--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3287,18 +3287,26 @@ input[type="submit"].btn.btn-mini {
   width: 236px;
   padding: 1px;
   text-align: left;
-  background-color: #ffffff;
+  background-color: #f5f5f5;
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
   background-clip: padding-box;
   border: 1px solid #ccc;
   border: 1px solid rgba(0, 0, 0, 0.2);
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  border-radius: 6px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
   -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  background-color: #e4e5e6;
+  background-image: -moz-linear-gradient(top, #d9dadc, #f5f5f5);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#d9dadc), to(#f5f5f5));
+  background-image: -webkit-linear-gradient(top, #d9dadc, #f5f5f5);
+  background-image: -o-linear-gradient(top, #d9dadc, #f5f5f5);
+  background-image: linear-gradient(to bottom, #d9dadc, #f5f5f5);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffd9dadc', endColorstr='#fff5f5f5', GradientType=0);
   white-space: normal;
 }
 .popover.top {
@@ -3319,8 +3327,8 @@ input[type="submit"].btn.btn-mini {
   font-size: 14px;
   font-weight: normal;
   line-height: 18px;
-  background-color: #f7f7f7;
-  border-bottom: 1px solid #ebebeb;
+  background-color: transparent;
+  border-bottom: 1px solid #bbbbbb;
   -webkit-border-radius: 5px 5px 0 0;
   -moz-border-radius: 5px 5px 0 0;
   border-radius: 5px 5px 0 0;
@@ -3349,14 +3357,14 @@ input[type="submit"].btn.btn-mini {
   margin-left: -11px;
   border-bottom-width: 0;
   border-top-color: #999;
-  border-top-color: rgba(0, 0, 0, 0.25);
+  border-top-color: #d9dadc;
   bottom: -11px;
 }
 .popover.top .arrow:after {
   bottom: 1px;
   margin-left: -10px;
   border-bottom-width: 0;
-  border-top-color: #ffffff;
+  border-top-color: #d9dadc;
 }
 .popover.right .arrow {
   top: 50%;
@@ -3384,7 +3392,7 @@ input[type="submit"].btn.btn-mini {
   top: 1px;
   margin-left: -10px;
   border-top-width: 0;
-  border-bottom-color: #ffffff;
+  border-bottom-color: #d9dadc;
 }
 .popover.left .arrow {
   top: 50%;
@@ -3499,15 +3507,41 @@ body {
   margin-left: 24px;
 }
 #map_canvas {
-  width: 1000px;
-  height: 562px;
+  width: 100%;
+  height: 450px;
   background-color: #cccccc;
 }
-#credit-control {
-  font-size: 14px;
-  text-shadow: 45deg #ffffff;
-  color: #176586;
-  margin-top: 36px;
+.top-sky-objects-container {
+  background-color: #e9ecf2;
+  background-image: -moz-linear-gradient(top, #dbe0ea, #ffffff);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#dbe0ea), to(#ffffff));
+  background-image: -webkit-linear-gradient(top, #dbe0ea, #ffffff);
+  background-image: -o-linear-gradient(top, #dbe0ea, #ffffff);
+  background-image: linear-gradient(to bottom, #dbe0ea, #ffffff);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffdbe0ea', endColorstr='#ffffffff', GradientType=0);
+  height: 40px;
+  width: 100%;
+  -webkit-border-top-left-radius: 500px 20px;
+  -moz-border-radius-topleft: 500px 20px;
+  border-top-left-radius: 500px 20px;
+  -webkit-border-top-right-radius: 500px 20px;
+  -moz-border-radius-topright: 500px 20px;
+  border-top-right-radius: 500px 20px;
+  position: relative;
+  top: -40px;
+  margin-bottom: -60px;
+}
+.map-tooltip h3 {
+  margin-top: 0;
+  padding: 0 12px 0;
+  font-size: 18px;
+  font-weight: normal;
+  margin-bottom: 12px;
+  border-bottom: 1px solid #bbbbbb;
+}
+.map-tooltip p {
+  padding: 0 12px 12px;
 }
 h1 {
   color: #000;
