--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
                         <%= link_to I18n::t("default.title"), root_path, :id => "logo" %>
                     </div>
                     <div class="span3">
-                        <form id="search-form" class="form-search" action="/search">
+                        <form id="search-form" class="form-search" action="/sky_objects/search">
                             <input type="text" name="q" id="search-input" placeholder="<%= I18n::t("default.search_placeholder") %>">
                         </form>
                     </div>
